<resources>
    <string name="app_name">Smart Farm</string>

    <string name="table">Data</string>
    <string name="control">Control</string>
    <string name="chart">Chart</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="registration">Registration</string>

    <string name="logo">Smart Farm</string>




    <string name="chart_nguong">Xem đồ thị theo ngưỡng</string>
    <string name="set_threshold">Cài đặt ngưỡng</string>
    <string name="intro_table">Bảng chi tiết các chỉ số trong môi trường nước</string>
    <string name="back">Quay lại</string>
    <string name="time_table">Thông số đo lúc:</string>
    <string name="temp">temp</string>
    <string name="index">Chỉ số: </string>
    <string name="threshold_up">Ngưỡng trên</string>
    <string name="threshold_down">Ngưỡng dưới</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="press_exit">Nhấn thoát lần nữa để thoát ứng dụng</string>



    <string name="alarm">Alarm</string>
    <string name="fan_limit">Start Fan</string>
    <string name="fan2">Fan 2</string>
    <string name="fan_alarm">Fan 1</string>
    <string name="hum_smaller">Humility smaller</string>

    <string name="manual">Manual</string>
    <string name="mis_alarm">Misting</string>
    <string name="mis_limit">Misting threshold</string>
    <string name="not_have_account">Have\'nt account</string>

    <string name="parameter">Parameter</string>
    <string name="pump_alarm">Pump</string>
    <string name="pump_limit">Punp threshold</string>
    <string name="register">Sign Up</string>
    <string name="temp_greater">Temperature greater</string>
    <string name="temp_smaller">Temperature smaller</string>
    <string name="Fan_1">Fan 1</string>
    <string name="Light">Light</string>
    <string name="Mis_status">Misting</string>
    <string name="Soil_Moisture">Soil moisure</string>
    <string name="Status_machine">Status Machine</string>
    <string name="Temperature">Temperature</string>
    <string name="Air_Humidity">Air humidity</string>
    <string name="status">Status</string>
    <string name="logout2">Log out</string>
    <string name="display">Display</string>


    <string name="cancel">Cancel</string>
    <string name="Change_Language">Change language</string>
    <string name="Connect_wifi">Connect wifi</string>
    <string name="fan2_time1">Time 1</string>
    <string name="fan2_time2">Time 2</string>
    <string name="fan_time1">Time 1</string>
    <string name="fan_time2">Time 2</string>
    <string name="lamp_alarm">Lamp</string>
    <string name="lamp_limit">Lamp threshold</string>
    <string name="lamp_time1">Time 1</string>
    <string name="lamp_time2">Time 2</string>
    <string name="mis_time1">Time 1</string>
    <string name="mis_time2">Time 2</string>
    <string name="pumpStatus">Pump</string>
    <string name="pump_time1">Time 1</string>
    <string name="pump_time2">Time 2</string>
    <string name="soil_smaller">Soil smaller</string>
    <string name="machine">Machine</string>
    <string name="recover_pass">Recover pass?</string>
    <string name="question_login">Log in</string>
    <string name="question_logout">Log out?</string>
    <string name="Automation">Automation</string>
    <string name="Lamp_status">Lamp</string>
    <string name="fan22">Fan 2</string>
</resources>
