<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <EditText
                android:id="@+id/Registration_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_design"
                android:hint="@string/email"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/Registration_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_design"
                android:padding="12dp"
                android:hint="@string/password"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColorHint="@android:color/white"
                />

            <Button
                android:id="@+id/btnregistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:gravity="center"

                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/btnlogin"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>