<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_gravity="center"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <EditText
                android:id="@+id/login_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_design"
                android:text="Email"
                android:textSize="30dp"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:textColor="#00000"
                 />

            <EditText
                android:id="@+id/login_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_design"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#858585"
                android:textColorHint="#000" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:gravity="center"

                android:textColor="#000"
                android:textAppearance="?android:textAppearanceLarge"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="12dp"
                android:text="@string/registration"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/btn_Registration"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>