<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/background_color"
        >
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/switch_ManualMode"
            android:layout_width="@dimen/auto_dp_50"
            android:layout_height="@dimen/auto_dp_30"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/auto_dp_20"
            android:focusable="false"
            android:textSize="30sp"
            android:thumb="@drawable/rectangle_thumb"
            android:track="@drawable/rectangle_track" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="130dp"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_gravity="center"
                android:text="@string/machine"
                android:textColor="#000000"

                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="100dp"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"

                android:text="@string/status"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_gravity="center"
                android:text="@string/parameter"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:layout_marginLeft="10dp"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fan"
                android:textSize="25dp"
                android:textColor="#000000"/>

            <Switch
                android:id="@+id/switch2"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:layout_marginLeft="118dp"
                android:textSize="18sp"
                android:thumb="@drawable/rectangle_thumb"
                android:track="@drawable/rectangle_track" />

            <TextView
                android:id="@+id/den1"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="60dp"
                android:textColor="#FF0000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mis"
                android:textSize="25dp"
                android:textColor="#000000"/>

            <Switch
                android:id="@+id/switch5"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:layout_marginLeft="120dp"
                android:textSize="18sp"
                android:thumb="@drawable/rectangle_thumb"
                android:track="@drawable/rectangle_track" />

            <TextView
                android:id="@+id/phunsuong1"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="60dp"

                android:textColor="#FF0000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pump"
                android:textSize="25dp"
                android:textColor="#000000"/>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:layout_marginLeft="95dp"
                android:textSize="18sp"
                android:thumb="@drawable/rectangle_thumb"
                android:track="@drawable/rectangle_track" />

            <TextView
                android:id="@+id/bomnuoc1"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="60dp"
                android:textColor="#FF0000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Light"
                android:textSize="25dp"
                android:textColor="#000000"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:layout_marginLeft="105dp"
                android:textSize="18sp"
                android:thumb="@drawable/rectangle_thumb"
                android:track="@drawable/rectangle_track" />

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/background_color"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Automation"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Switch
                android:id="@+id/switch_AutoMode"
                android:layout_width="@dimen/auto_dp_50"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/auto_dp_20"
                android:focusable="false"
                android:textSize="30sp"
                android:thumb="@drawable/rectangle_thumb"
                android:track="@drawable/rectangle_track" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:progressDrawable="@drawable/control_volume"
                android:text="@string/temp_greater"
                android:textColor="#000000"
                android:textSize="15dp" />
            <SeekBar
                android:id="@+id/see1"
                android:layout_width="190dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/control_volume" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:progressDrawable="@drawable/control_volume"
                android:text="@string/temp_smaller"
                android:textColor="#000000"
                android:textSize="15sp" />
            <SeekBar
                android:id="@+id/see2"
                android:layout_width="190dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/control_volume" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="138dp"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:progressDrawable="@drawable/control_volume"
                android:text="@string/hum_smaller"
                android:textColor="#000000"
                android:textSize="15dp" />
            <SeekBar
                android:id="@+id/see3"
                android:layout_width="190dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/control_volume" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="143dp"
                android:layout_height="@dimen/auto_dp_30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:progressDrawable="@drawable/control_volume"
                android:text="@string/soil_smaller"
                android:textColor="#000000"
                android:textSize="15dp" />
            <SeekBar
                android:id="@+id/see4"
                android:layout_width="190dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/control_volume" />
        </LinearLayout>

    </LinearLayout>


    </ScrollView>
</LinearLayout>